--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /tmp
 /out-tsc
 /bazel-out
+/15.2.1
 
 # Node
 /node_modules
@@ -30,6 +31,7 @@ yarn-error.log
 
 # Miscellaneous
 /.angular/cache
+.angular/cache/
 .sass-cache/
 /connect.lock
 /coverage
